--- a/siofs/src/Styles/Historial_Etapa.css
+++ b/siofs/src/Styles/Historial_Etapa.css
@@ -2,25 +2,59 @@
   display: flex;
   height: 100vh; 
 }
+h1 {
+  text-align: left;
+  color: #4D1F0F;
+  font-weight: 700; 
+  line-height: 150%;
+}
+h2 {
+  text-align: left;
+  color: #4D1F0F;
+  font-weight: 700; 
+  line-height: 150%;
+}
+h3 {
+  color: #454545;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+}
 
-.sidebar {
-  width: 250px;
-  background-color: #f7f7f7;
-  padding: 20px;
-  height: 95%; 
+p, li, a {
+  font-weight: 400; 
+}
+.header h2{
+  color: #454545;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+}
+
+.sidebar1 {
+  width: 220px; /* Ajustar según el tamaño deseado */
+  height: 100%; 
+  background: #FAFAFA;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+  position: fixed; /* Mantén el sidebar fijo en el lado izquierdo */
+  top: 0;
+  left: 0;
   display: flex;
   flex-direction: column;
-  justify-content: space-between; 
-.profile {
-  text-align: center;
-}
+  justify-content: space-between;
+  padding: 20px;
+
+
+
+  .profile {
+    text-align: center;
+    margin-bottom: 30px; /* Agrega un margen entre el perfil y el contenido */
+  }
 }
 
-.profile {
-  text-align: center;
-  padding: 20px;
-  /* Otros estilos */
-}
 
 .profile-pic {
   width: 100px;
@@ -36,20 +70,32 @@
 }
 
 .role {
-  color: #666;
+  color: green;
 }
 
-  .content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100vh;
-  }
+
+.content1 {
+  
+  margin-left: 270px; /* Aumentar el margen para que el contenido quede a la derecha del sidebar */
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: calc(100% - 270px); /* Asegura que el contenido use el resto del espacio */
+}
 .table-container {
-  margin-top: 2em;
-  border-collapse: collapse; 
-  width: 100%; 
-  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  
+  position: absolute;
+  width: 1057px;
+  height: 171px;
+  left: calc(50% - 1057px/2 + 163px);
+  top: 304px;
+  
 }
 
 .table-container th,
@@ -76,12 +122,42 @@
 }
 .table {
   margin-bottom: 600px;
+  
 }
 .capture-button {
-  background-color: #007bff;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 16px;
+  gap: 8px;
   cursor: pointer;
+
+  position: absolute;
+  width: 220px;
+  height: 50px;
+  right: 460px;
+  top: 400px; /* mover el botón hacia arriba */
+  
+  background: #74B22C;
+  border-radius: 20px;
+
+  width: 195px;
+  height: 36px;
+
+  font-family: 'Jost';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 150%;
+  display: flex;
+  align-items: center;
+
+  color: #FFFFFF;
+}
+.icon {
+  width: 20px; 
+  height: 20px;
+  margin-right: 10px; /* Espacio entre el ícono y el texto */
+  vertical-align: middle;
 }
