--- a/siofs/src/Styles/Historial_Etapa.css
+++ b/siofs/src/Styles/Historial_Etapa.css
@@ -25,6 +25,20 @@ h3 {
 p, li, a {
   font-weight: 400; 
 }
+
+nav ul {
+  display: flex;
+  flex-direction: column;
+  gap: 2px; 
+  padding: 0;
+  text-decoration: none; 
+}
+
+nav ul li a {
+  text-decoration: none;  /* Elimina el subrayado */
+  color: #000000;  /* Cambia el color del texto a rojo */
+}
+
 .header h2{
   color: #454545;
   font-style: normal;
@@ -34,7 +48,7 @@ p, li, a {
 }
 
 .sidebar1 {
-  width: 220px; /* Ajustar según el tamaño deseado */
+  width: 200px; /* Ajustar según el tamaño deseado */
   height: 100%; 
   background: #FAFAFA;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -51,7 +65,7 @@ p, li, a {
 
   .profile {
     text-align: center;
-    margin-bottom: 30px; /* Agrega un margen entre el perfil y el contenido */
+    margin-top: 90px;
   }
 }
 
@@ -160,4 +174,22 @@ p, li, a {
   height: 20px;
   margin-right: 10px; /* Espacio entre el ícono y el texto */
   vertical-align: middle;
+}
+.logout {
+  margin-bottom: 80px;
+
+height: 27px;
+left: 136px;
+top: 892px;
+color: #000000;
+text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  
+}
+
+.logout a {
+  text-decoration: none; 
+}
+
+.logout a:hover {
+  color: darkred; 
 }
