--- a/siofs/src/Styles/submenu_HS.css
+++ b/siofs/src/Styles/submenu_HS.css
@@ -5,35 +5,25 @@
 
 
 .sidebar {
-  width: 250px;
-  background-color: #f7f7f7;
-  padding: 20px;
-  height: 95%; 
+  width: 200px; 
+  height: 100%; 
+  background: #FAFAFA;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+  position: fixed; /* Mantén el sidebar fijo en el lado izquierdo */
+  top: 0;
+  left: 0;
   display: flex;
   flex-direction: column;
-  justify-content: space-between; 
-.profile {
-  text-align: center;
-}
-}
-
-.profile {
-  text-align: center;
+  justify-content: space-between;
   padding: 20px;
-  
-}
 
-.profile-pic {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  overflow: hidden;
-}
 
-.profile-pic img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+
+  .profile {
+    text-align: center;
+    margin-top: 90px;
+  }
 }
 
 .role {
@@ -41,10 +31,25 @@
 }
 
   .content {
+    margin-left: 270px; 
+    padding: 20px;
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: calc(100% - 270px);
+  }
+
+  .header {
+    display: flex;
     justify-content: space-between;
-    height: 100vh;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  .title {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; /* Asegura que estén alineados a la izquierda */
   }
 .table-container {
   margin-top: 6em;
