--- a/siofs/src/Styles/Alta.css
+++ b/siofs/src/Styles/Alta.css
@@ -3,12 +3,10 @@ h2 {
     font-weight: 600; /* Semibold */
   }
 
-/* Contenedor general del formulario */
-.AltaFormContainer {
+  .AltaFormContainer {
     width: 100%;
     max-width: 560px;
-    margin: 0 auto;
-    padding: 20px 30px 15px 20px;
+    padding: 10px 30px 15px 20px; /* Reduce el padding superior */
     background-color: #F3F0EF;
     border-radius: 25px;
     display: flex;
@@ -16,20 +14,42 @@ h2 {
     align-items: left;
   }
   
+  /* Estilos generales para el contenedor de dirección */
+  .DireccionFormContainer {
+    width: 100%;
+    max-width: 560px;
+    padding: 10px 30px 15px 20px; /* Reduce el padding superior */
+    background-color: #F3F0EF;
+    border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+  }
+  
+  .FormContainerWrapper {
+    display: flex;
+    justify-content: center; /* Coloca ambos contenedores al inicio */
+    padding: 0; /* Elimina el padding superior e inferior */
+    margin-left: 210px; /* Separación del sidebar */
+    gap: 100px; /* Espacio entre los contenedores */
+  }
   /* Estilo para el formulario usando grid */
-  .AltaFormGrid {
+  .AltaFormGrid,
+  .DireccionFormGrid {
     display: grid;
     grid-template-columns: 1.4fr 1.1fr; /* Dos columnas */
     width: 100%;
   }
   
   /* Ajuste de los campos a la derecha */
-  .AltaFormField:nth-child(even) {
+  .AltaFormField:nth-child(even),
+  .DireccionFormField:nth-child(even) {
     padding-left: 50px; /* Espacio a la izquierda */
   }
   
   /* Etiquetas y campos de entrada en línea */
-  .AltaFormField label {
+  .AltaFormField label,
+  .DireccionFormField label {
     font-family: 'Jost', sans-serif;
     font-weight: 700;
     font-size: 14px;
@@ -39,31 +59,53 @@ h2 {
     margin-left: 10px;
   }
   
-  /* Entradas de texto y otros campos de formulario */
-  .AltaFormField input {
-    width: 95%; /* Ajusta el ancho de los campos de texto */
-    padding: 10px;
-    background-color: #FFFEFB;
-    border: 1px solid #ccc;
-    border-radius: 54px;
-    margin-bottom: 7px;
+  .AltaFormField input,
+  .AltaFormField textarea, /* Añadido para aplicar el mismo estilo a textarea */
+  .DireccionFormField input,
+  .DireccionFormField textarea { /* También para la dirección */
+      width: 95%; /* Ajusta el ancho de los campos de texto */
+      padding: 10px;
+      background-color: #FFFEFB;
+      border: 1px solid #ccc;
+      border-radius: 54px;
+      margin-bottom: 7px;
   }
+  
   
   /* Botón de envío */
   .AltaSubmitButtonContainer {
-    width: 100%;
-    text-align: center;
-    margin-top: 40px; /* Espacio arriba del botón */
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+    margin-left: 220px;
   }
   
   .AltaSubmitButton {
-    padding: 10px 20px;
-    background-color: #4D1F0F;
-    color: #FFFEFB;
+    background-color: #74B22C;
+    color: white;
     border: none;
-    border-radius: 25px;
-    font-family: 'Jost', sans-serif;
+    border-radius: 20px;
+    padding: 10px 20px;
+    font-size: 18px;
     cursor: pointer;
-    text-align: center;
+    font-family: 'Jost', sans-serif;
   }
+  
+  .AltaCancelButton {
+    background-color: #4D1F0F;
+    color: white;
+    border: none;
+    border-radius: 20px;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    font-family: 'Jost', sans-serif;
+  }
+  
+  .AltaSubmitButton:hover,
+  .AltaCancelButton:hover {
+    opacity: 0.9;
+  }
+  
   
